[gd_scene load_steps=21 format=3 uid="uid://clya3yv7xjuv"]

[ext_resource type="Script" path="res://scenes/actors/visk.gd" id="1_53i4x"]
[ext_resource type="Script" path="res://scenes/resources/Movement/movement_stats.gd" id="1_gjge7"]
[ext_resource type="Script" path="res://scenes/resources/Movement/movement_velocity_input.gd" id="1_ocm38"]
[ext_resource type="Texture2D" uid="uid://cornbapgagjv4" path="res://assets/textures/Dungeon/0x72 Dungeon Individual Frames/Characters/Lizard/lizard_m_hit_anim_f0.png" id="2_qod57"]
[ext_resource type="Texture2D" uid="uid://c0ch6pxkt8lwf" path="res://assets/textures/Dungeon/0x72 Dungeon Individual Frames/Characters/Lizard/lizard_m_idle_anim_f0.png" id="3_kcltu"]
[ext_resource type="Script" path="res://scenes/resources/Movement/movement.gd" id="3_tar60"]
[ext_resource type="Texture2D" uid="uid://bv1pv066h24u7" path="res://assets/textures/Dungeon/0x72 Dungeon Individual Frames/Characters/Lizard/lizard_m_idle_anim_f1.png" id="4_sd2r1"]
[ext_resource type="Texture2D" uid="uid://y65nu10n4eto" path="res://assets/textures/Dungeon/0x72 Dungeon Individual Frames/Characters/Lizard/lizard_m_idle_anim_f2.png" id="5_otjd4"]
[ext_resource type="Script" path="res://scenes/resources/actor_animator.gd" id="6_81c20"]
[ext_resource type="Texture2D" uid="uid://djqnstwy02o5l" path="res://assets/textures/Dungeon/0x72 Dungeon Individual Frames/Characters/Lizard/lizard_m_idle_anim_f3.png" id="6_vvtvu"]
[ext_resource type="Texture2D" uid="uid://m07w8mpnjk0i" path="res://assets/textures/Dungeon/0x72 Dungeon Individual Frames/Characters/Lizard/lizard_m_run_anim_f0.png" id="7_bxf78"]
[ext_resource type="Texture2D" uid="uid://1i13ipadpyto" path="res://assets/textures/Dungeon/0x72 Dungeon Individual Frames/Characters/Lizard/lizard_m_run_anim_f1.png" id="8_hgnkm"]
[ext_resource type="PackedScene" uid="uid://84rlq7cm87st" path="res://scenes/weapons/actor_weapon.tscn" id="8_t3ayo"]
[ext_resource type="Texture2D" uid="uid://4ro2ebxpxapq" path="res://assets/textures/Dungeon/0x72 Dungeon Individual Frames/Characters/Lizard/lizard_m_run_anim_f2.png" id="9_j8xxn"]
[ext_resource type="Texture2D" uid="uid://dpgt1ndthj17h" path="res://assets/textures/Dungeon/0x72 Dungeon Individual Frames/Characters/Lizard/lizard_m_run_anim_f3.png" id="10_heawl"]
[ext_resource type="PackedScene" uid="uid://dyl4kprkullxo" path="res://scenes/resources/Damage/health_stats.tscn" id="10_pcyjx"]
[ext_resource type="PackedScene" uid="uid://bmq8lhf8qh7iu" path="res://scenes/weapons/spear.tscn" id="11_fpdar"]

[sub_resource type="SpriteFrames" id="SpriteFrames_m7t3u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qod57")
}],
"loop": true,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kcltu")
}, {
"duration": 1.0,
"texture": ExtResource("4_sd2r1")
}, {
"duration": 1.0,
"texture": ExtResource("5_otjd4")
}, {
"duration": 1.0,
"texture": ExtResource("6_vvtvu")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_bxf78")
}, {
"duration": 1.0,
"texture": ExtResource("8_hgnkm")
}, {
"duration": 1.0,
"texture": ExtResource("9_j8xxn")
}, {
"duration": 1.0,
"texture": ExtResource("10_heawl")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6gue7"]
radius = 5.0

[sub_resource type="Resource" id="Resource_b4sjk"]
script = ExtResource("1_gjge7")
speed = 125

[node name="Visk" type="CharacterBody2D" groups=["allies"]]
motion_mode = 1
script = ExtResource("1_53i4x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_m7t3u")
animation = &"move"
autoplay = "idle"
frame_progress = 0.772669

[node name="actor_collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6gue7")

[node name="MovementVelocityInput" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("1_ocm38")
actor = NodePath("..")
movement_stats = SubResource("Resource_b4sjk")

[node name="DeathAnimationTimer" type="Timer" parent="MovementVelocityInput"]
one_shot = true

[node name="ActorAnimator" type="Node" parent="." node_paths=PackedStringArray("actor", "animated_sprite")]
script = ExtResource("6_81c20")
actor = NodePath("..")
animated_sprite = NodePath("../AnimatedSprite2D")

[node name="Movement" type="Node" parent="."]
script = ExtResource("3_tar60")

[node name="HealthStats" parent="." instance=ExtResource("10_pcyjx")]
health = 6

[node name="ActorWeapon" parent="." instance=ExtResource("8_t3ayo")]
weapon = ExtResource("11_fpdar")

[node name="InvulnerabilityTimer" type="Timer" parent="."]
one_shot = true

[connection signal="zeroed" from="HealthStats" to="." method="_on_health_stats_zeroed"]
[connection signal="zeroed" from="HealthStats" to="MovementVelocityInput" method="_on_health_stats_zeroed"]
[connection signal="used" from="ActorWeapon" to="." method="_on_actor_weapon_used"]
